# Bilal_mart

./: README.md  port config.txt
database/: docker-compose.yml  pyproject.toml
inventory/: docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
inventory/inventory/: main.py
notification/: .env  dockerfile  pyproject.toml
notification/notification/: main.py
orders/: .env  docker-compose.yml  dockerfile  pyproject.toml
orders/orders/: main.py
payment/: .env  pyproject.toml
products/: .env  docker-compose.yml  dockerfile  pyproject.toml
products/products/: main.py
products/tests/: main.py
user/: docker-compose.yml  dockerfile  pyproject.toml
user/tests/: test.py
user/user/: main.py
