[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["Mohammad Mashood Bilal <mohammadmashoodbilal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.20"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
