[tool.poetry]
name = "inventory"
version = "0.1.0"
description = ""
authors = ["Mohammad Mashood Bilal <mohammadmashoodbilal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlmodel = "^0.0.20"
pytest = "^8.3.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
kafka = "^1.3.5"
psycopg = "^3.2.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
