[tool.poetry]
name = "orders"
version = "0.1.0"
description = ""
authors = ["Mohammad Mashood Bilal <mohammadmashoodbilal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
pytest = "^8.2.2"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
psycopg = "^3.1.19"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
