[tool.poetry]
name = "user"
version = "0.1.0"
description = ""
authors = ["Mohammad Mashood Bilal <mohammadmashoodbilal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kafka = "^1.3.5"
pydantic = "^2.8.2"
fastapi = "^0.111.1"
sqlmodel = "^0.0.20"
pytest = "^8.2.2"
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
